# ChangeLog for perl-core/Archive-Tar
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.11 2009/06/15 08:20:25 tove Exp $

*Archive-Tar-1.52 (15 Jun 2009)

  15 Jun 2009; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.52.ebuild:
  Version bump

*Archive-Tar-1.50 (12 Jun 2009)

  12 Jun 2009; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.50.ebuild:
  Version bump

*Archive-Tar-1.48 (21 Apr 2009)

  21 Apr 2009; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.48.ebuild:
  Version bump

  18 Apr 2009; Torsten Veller <tove@gentoo.org> -Archive-Tar-1.32.ebuild,
  Archive-Tar-1.38.ebuild, Archive-Tar-1.40.ebuild, Archive-Tar-1.46.ebuild:
  Remove old version. Drop KEYWORDS from vulnerable version. Move
  dev-perl/IO-Compress-Bzip2 -> virtual/perl-IO-Compress-Bzip2

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Archive-Tar-1.42.ebuild,
  -Archive-Tar-1.44.ebuild:
  Cleanup

*Archive-Tar-1.46 (05 Mar 2009)

  05 Mar 2009; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.46.ebuild:
  Version bump

*Archive-Tar-1.44 (19 Jan 2009)

  19 Jan 2009; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.44.ebuild:
  Version bump

*Archive-Tar-1.42 (15 Dec 2008)

  15 Dec 2008; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.42.ebuild:
  Version bump

  10 Dec 2008; Alexis Ballier <aballier@gentoo.org> Archive-Tar-1.40.ebuild:
  keyword ~sparc-fbsd

  04 Nov 2008; Mike Frysinger <vapier@gentoo.org> Archive-Tar-1.40.ebuild:
  Add arm/s390/sh love.

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Archive-Tar-1.32.ebuild, +Archive-Tar-1.38.ebuild,
  +Archive-Tar-1.40.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org> Archive-Tar-1.32.ebuild,
  Archive-Tar-1.38.ebuild, Archive-Tar-1.40.ebuild:
  New virtuals: Compress-Zlib IO-Zlib

  27 Oct 2008; Alexis Ballier <aballier@gentoo.org> Archive-Tar-1.40.ebuild:
  keyword ~x86-fbsd, bug #192989