@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/Archive-Tar-1.40.ebuild,v 1.4 2009/04/18 16:10:45 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/Archive-Tar-1.40.ebuild,v 1.5 2009/07/19 18:01:46 tove Exp $
 
 MODULE_AUTHOR=KANE
 inherit perl-module
@@ -10,15 +10,12 @@ DESCRIPTION="A Perl module for creation and manipulation of tar files"
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE="bzip2"
+IUSE=""
 
 DEPEND=">=virtual/perl-IO-Zlib-1.01
-	>=virtual/perl-Compress-Zlib-2.012
-	bzip2? ( >=virtual/perl-IO-Compress-Bzip2-2.012 )
+	>=virtual/perl-IO-Compress-2.012
 	dev-perl/IO-String
 	perl-core/Package-Constants
 	dev-lang/perl"
 
 SRC_TEST="do"
-
-use bzip2 || myconf="-n"
