@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Archive-Tar
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.11 2009/06/15 08:20:25 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.12 2009/07/19 18:01:46 tove Exp $
+
+  19 Jul 2009; Torsten Veller <tove@gentoo.org> Archive-Tar-1.40.ebuild,
+  Archive-Tar-1.46.ebuild, Archive-Tar-1.48.ebuild:
+  IO-Compress replaces Compress-Zlib and IO-Compress-Bzip2
 
 *Archive-Tar-1.52 (15 Jun 2009)
 
